--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Hop Skip Hundred: A Coding Project By Ryan Haley</title>
+    <title>Backtrack: A Coding Project By Ryan Haley</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +27,7 @@
     <!-- Nav section -->
     <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand logoFont" href="/index.html"><img class="mb-1" src="img/HopSkipHundred-chroma.svg" width="30" class="d-inline-block align-text-top">HsH</a>
+            <a class="navbar-brand logoFont" href="/index.html"><img class="mb-1" src="img/HopSkipHundred-chroma.svg" width="30" class="d-inline-block align-text-top">Backtrack</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,8 +59,8 @@
        <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Hop Skip Hundred: A Coding Project</h1>
-                    <h4 class="lead">Some nice description.  Pretty language to explain what the project does.</h4>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Backtrack: A Coding Project</h1>
+                    <h4 class="lead">> Bring to Front</h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS & Bootstrap Layout</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JS Fundamentals</li>
