--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
     <head>
-        <title>Hopskip Hundred: A Coding Project By Ryan Haley</title>
+        <title>BackTrack: A Coding Project By Ryan Haley</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +27,7 @@
         <!-- Nav section -->
         <nav class="navbar navbar-expand-md navbar-light fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logoFont" href="/index.html"><img class="mb-1" src="img/HopSkipHundred-chroma.svg" width="30" class="d-inline-block align-text-top">HsH</a>
+                <a class="navbar-brand logoFont" href="/index.html"><img class="mb-1" src="img/backtrack-logo.svg" width="30" class="d-inline-block align-text-top">BackTrack</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,10 +44,7 @@
                             <a class="nav-link" href="/code.html">The Code</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Git Repo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="#">About</a>
+                            <a class="nav-link" href="https://github.com/project-haley/Backtrack">Git Repo</a>
                         </li>
                     </ul>
                 </div>
@@ -55,7 +52,7 @@
         </nav>
         
         <!-- Main section -->
-        <main class="flex-shrink-0">
+        <main class="mt-4 flex-shrink-0">
             <div class="container">
                 <div class="row row-cols-1 row-cols-lg-2">
                     <div class="col-lg-4 col">
@@ -97,7 +94,7 @@
                         </div>
                     </div>
                     <div class="col d-flex align-items-center justify-content-lg-center">
-                        <img height="36" src="/img/HopSkipHundred-chroma.svg">
+                        <img height="36" src="/img/backtrack-logo.svg">
                     </div>
                     <div class="col d-flex align-items-center justify-content-lg-end">
                         <div class="row ">
